--- a/src/component/Shopping/ShoppingCard.css
+++ b/src/component/Shopping/ShoppingCard.css
@@ -80,7 +80,7 @@
   border-radius: 10px;
   margin-bottom: 10px;
   display: block; /* Ensures no extra space below the image */
-  border: 1px solid #7b7474; /* Consistent border color */
+  border: 1px solid #c1bdbd; /* Consistent border color */
 }
 
 
