--- a/src/component/login/Login.css
+++ b/src/component/login/Login.css
@@ -17,18 +17,20 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: aliceblue;
-   
+  background-color: rgb(255, 255, 255);
 }
-
+.login-container img{
+  size: 10px;
+}
 /* Container for the form */
 .form-section {
   background: white; /* White background for the form */
   padding: 2rem; /* Padding inside the form */
   border-radius: 8px; /* Rounded corners */
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Shadow for a subtle 3D effect */
+  /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); Shadow for a subtle 3D effect */
   width: 100%;
   max-width: 400px; /* Max width for larger screens */
+  border-color: aliceblue;
 }
 
 /* Header styling */
