--- a/src/component/home/Home.css
+++ b/src/component/home/Home.css
@@ -4,6 +4,8 @@ html, body {
   font-family: Arial, sans-serif;
   height: 100%;
   overflow-x: hidden; 
+background:url("C:\Users\UNNI\Documents\PetSales\furry-finds\src\Assets\bg3.png") no-repeat fixed center/cover);
+
 }
 
 .NavBar {
@@ -47,24 +49,24 @@ html, body {
 .search-icon {
   position: relative;
 /* left: 0px;  */
-right: 400px;/* Adjust this value to position the icon inside the input */
+right: 400px;
 bottom: 85.2%;
 transform: translateY(-50%);
 color: #000;
 background-color: #ffffff;
 padding: 9px;
-border-radius: 12%; /* Make the background circular */
-border: 1px solid #ffffff; /* Optional: Add a border to match the input field */
-font-size: 17px; /* Adjust the size of the icon */
+border-radius: 12%; 
+border: 1px solid #ffffff; 
+font-size: 17px; 
 display: flex;
 align-items: center;
 justify-content: center;
 }
 .nav-links-container {
   display: flex;
-  flex-direction: column; /* Stack the links vertically */
-  align-items: center; /* Center the links */
-  gap: 10px; /* Add some space between the link groups */
+  flex-direction: column; 
+  align-items: center; 
+  gap: 10px; 
 }  
 .nav-links1 ul {
   list-style: none;
@@ -141,16 +143,16 @@ justify-content: center;
 .para {
   font-size: 2.5rem; 
   font-weight: bold; 
-  color: #000000; /* Dark text color for contrast */
-  background: transparent; /* Gradient background */
-  padding: 40px; /* Add padding around the text */
-  border-radius: 10px; /* Rounded corners */
-  width:300%; /* Limit the width of the text block */
-  margin: 0 auto; /* Center the text block horizontally */
+  color: #000000;
+  background: transparent; 
+  padding: 40px; 
+  border-radius: 10px; 
+  width:300%;
+  margin: 0 auto; 
   line-height: 1.5;
   font-family: 'Franklin Gothic Medium';
   text-align: center;
-  transition:transform 0.3s ease-in-out; /* Increase line height for readability */
+  transition:transform 0.3s ease-in-out; 
 }
 .para:hover{
   transform:scale(1.15);
@@ -158,10 +160,12 @@ justify-content: center;
 }
 
 #header1{
+/* background:url("C:\Users\UNNI\Documents\PetSales\furry-finds\src\Assets\bg3.png") no-repeat fixed center/cover; */
 background: linear-gradient(to bottom,
 rgba(0.4, 0.2, 0.2, 0.3),transparent
 ), url("C:\Users\UNNI\Documents\PetSales\furry-finds\src\Assets\bg3.png") no-repeat fixed center/cover;
-background-position: calc(50% + 60px) calc(50% + 20px);
+background-size: 120ch;
+background-position: calc(50% + 90px) calc(50% + 20px);
 justify-content: flex-start;
 align-items: flex-end;
 height: auto;
@@ -177,6 +181,7 @@ margin-top: -20px;
 .homecontainer{
   max-width: 210px;
   padding: 0 2rem;
+  margin:0;
 }
 .vh-100{
   min-height: 70vh;
@@ -187,6 +192,7 @@ margin-top: -20px;
   justify-content: center;
   align-items: center;
   padding: 2rem;
+  margin-top: 40px;
 }
 
 .flex{
@@ -196,8 +202,8 @@ margin-top: -20px;
 }
 .card {
 position: relative;
-width: 400px; /* Adjust the width as needed */
-height: 250px; /* Adjust the height as needed */
+width: 400px; 
+height: 250px; 
 background-image: url('https://img.freepik.com/free-photo/top-view-pet-accessories-still-life-with-water-food-bowls_23-2148949558.jpg?t=st=1722399710~exp=1722403310~hmac=927848b72748d48b72cdddd2c5ba065802a86081fe980964feba317f8e8deae2&w=1060'); /* Replace with your image URL */
 background-size: cover;
 background-position: center;
@@ -216,7 +222,7 @@ margin-top:60px;
 position: absolute;
 top: 20px;
 left: 20px;
-max-width: 60%; /* Adjust based on the desired content width */
+max-width: 60%; 
 color: white;
 padding: 20px;
 border-radius: 10px;
@@ -308,11 +314,11 @@ box-shadow: 0 8px 36px rgba(0, 0, 0, 0.2);
 }
 
 .social-icons > * {
-  /* Add margin or padding between icons if needed */
+
   margin-right: 10px;
 }
 .footer-content {
-  margin-top: 0; /* Adjust margin top for the footer content */
+  margin-top: 0; 
 }
 
 #footer{
@@ -343,10 +349,9 @@ box-shadow: 0 8px 36px rgba(0, 0, 0, 0.2);
   transition: var(--transition);
   word-spacing: 7px;
 }
-/* Add margin or padding to the anchor tags */
 .flex a {
 margin-bottom: 14px;
-  margin-right: 30px; /* Adjust the right margin as needed */
+  margin-right: 30px; 
 }
 
 #footer-content ul li a:hover{
