--- a/src/component/pets/PetFilter.css
+++ b/src/component/pets/PetFilter.css
@@ -51,7 +51,7 @@
    */
    .petfilter-options {
     padding: 15px;
-    background-color: #f9f9f9;
+    background-color: white;
     border: 1px solid #ddd;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -80,7 +80,7 @@
     text-align: center;
     transition: background-color 0.3s ease, border-color 0.3s ease;
     font-size: 1em;
-    color: #555;
+    color: #020202;
 }
 
 .petfilter-category:hover {
@@ -107,7 +107,7 @@
     text-align: center;
     transition: background-color 0.3s ease, border-color 0.3s ease;
     font-size: 1em;
-    color: #555;
+    color: #000000;
 }
 
 .breed-option:hover {
