--- a/src/component/Footer/Footer.css
+++ b/src/component/Footer/Footer.css
@@ -1,63 +1,106 @@
+footer {
+  background-color: #F8F4E1;
+  display: flex;
+  justify-content: center;
+  width: 100dvw;
+  /* background-image: linear-gradient(to top, #09203f 0%, #537895 100%); */
+  padding: 40px 0;
+}
 
-.social-icons {
-    flex-direction: row;
-    margin-left: 30px;
-    display: flex;
-    justify-content: center;
-    margin-top: -15px;
-    gap: 4px;
+footer .container {
+  display: grid;
+  grid-template-columns: 3fr 2fr 2fr 4fr 3fr;
+  grid-gap: 30px;
+  max-width: 1300px;
+  /* margin: 0 auto; */
+  /* padding: 0 30px; */
+}
+
+@media screen and (max-width: 768px) {
+  footer .container {
+    grid-template-columns: repeat(2, 1fr);
   }
-  
-  .social-icons > * {
-    /* Add margin or padding between icons if needed */
-    margin-right: 10px;
-  }
-  .footer-content {
-    margin-top: 0; /* Adjust margin top for the footer content */
-  }
-  
-#footer{
-    background-color: rgb(0, 0, 0);
-    color: rgb(245, 239, 239);
-    margin-top:10px;
-    height: fit-content;
 }
-#footer-content{
-    text-align: center;
-    background-color: #000000;
-    
+
+.box-logo {
+  display: flex;
+  flex-direction: column;
 }
-#footer-content h3{
-    color:rgb(255, 255, 255);
-    font-size: 1.5rem;
-    letter-spacing: 2px;
+
+.box-logo h1 {
+  margin: 0;
+  font-size: 28px;
 }
-#footer-content ul{
-    margin-left:0px;
-    flex-direction: row;
-    display: flex;
-    word-spacing: 1px;
+
+.box-logo p {
+  margin: 20px 0;
+  font-size: 16px;
 }
-#footer-content ul li a{
-    color: rgb(255, 255, 255);
-    font-size: 1.5rem;
-    transition: var(--transition);
-    word-spacing: 7px;
+
+.icons {
+  display: flex;
+  gap: 10px;
 }
-/* Add margin or padding to the anchor tags */
-.flex a {
+
+.icon {
+  background-color: #1eb2a6;
+  color: white;
+  padding: 10px;
+  border-radius: 50%;
+  font-size: 20px;
+}
+
+.box {
+  display: flex;
+  flex-direction: column;
+}
+
+.box h3 {
+  margin-bottom: 20px;
+  font-weight: 500;
+  font-size: 20px;
+}
+
+.box ul {
+  list-style: none;
+  padding: 0;
+}
+
+.box ul li {
   margin-bottom: 10px;
-    margin-right: 30px; /* Adjust the right margin as needed */
-  }
-  
-#footer-content ul li a:hover{
-    opacity: 0.3;
+  font-size: 16px;
 }
-#footer-content ul li{
-    margin: .5rem 1rem;
+
+.box ul li::before {
+  content: "⟶";
+  color: #1eb2a6;
+  margin-right: 5px;
 }
-footer-content > div:first-child{
-    margin-bottom: 5rem;
+
+.last ul {
+  padding: 0;
 }
-  
-  
+
+.last ul li {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.last i {
+  font-size: 20px;
+  color: #1eb2a6;
+  margin-right: 10px;
+}
+
+.legal {
+  text-align: center;
+  padding: 20px 0;
+  color: grey;
+  background-color: #e9e9e9;
+}
+
+.legal p {
+  font-size: 15px;
+  margin: 0;
+}
