--- a/src/component/Shopping/ShoppingCard.css
+++ b/src/component/Shopping/ShoppingCard.css
@@ -79,8 +79,8 @@
   object-fit: cover;
   border-radius: 10px;
   margin-bottom: 10px;
-  display: block; /* Ensures no extra space below the image */
-  border: 1px solid #c1bdbd; /* Consistent border color */
+  display: block; 
+  border: 1px solid #c1bdbd; 
 }
 
 
