--- a/src/component/pets/PetPage.css
+++ b/src/component/pets/PetPage.css
@@ -5,7 +5,8 @@
   .petsidebar {
     width: 18%;
     padding: 1.5rem;
-    background-color: #f9f9f9;
+    /* background-color: #f9f9f9; */
+    background-image: linear-gradient(135deg, #fdfcfb 0%, #e2d1c3 100%);
     border-right: 1px solid #838181;
   }
   
