--- a/src/component/signup/Signup.css
+++ b/src/component/signup/Signup.css
@@ -3,7 +3,8 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #f0f0f0;
+  /* background-color: #a97f7f; */
+  background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
 }
 
 .form-section {
@@ -11,13 +12,11 @@
   align-items: center;
   background-color: #fff;
   border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 10px rgba(0.2, 0.3, 0.4, 0.5);
   width: 80%;
   max-width: 900px;
 }
-.signform{
-  padding-left: 150px;
-}
+
 .image-container {
   flex: 1;
   display: flex;
@@ -26,21 +25,26 @@
 }
 
 .image-container img {
-  max-width: 100%;
+  width: 100%;
   height: auto;
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
 }
 
 .form-content {
-  flex: 2;
+  flex: 1;
   padding: 20px;
+  display: flex;
+  flex-direction: column;
+  background-image: linear-gradient(to top, #f3e7e9 0%, #e3eeff 99%, #e3eeff 100%);
+  /* background: linear-gradient(to bottom, #D5DEE7 0%, #E8EBF2 50%, #E2E7ED 100%), linear-gradient(to bottom, rgba(0,0,0,0.02) 50%, rgba(255,255,255,0.02) 61%, rgba(0,0,0,0.02) 73%), linear-gradient(33deg, rgba(255,255,255,0.20) 0%, rgba(0,0,0,0.20) 100%);
+ background-blend-mode: normal,color-burn; */
 }
 
 .header {
   font-size: 24px;
   font-weight: bold;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 .underline {
@@ -55,10 +59,21 @@
   flex-direction: column;
 }
 
+.input-group {
+  margin-bottom: 20px;
+}
+
+.input-label {
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
 .input {
   display: flex;
   align-items: center;
-  margin-bottom: 15px;
+  border: none ;
+  border-radius: 5px;
+  padding: 5px;
 }
 
 .input img {
@@ -66,44 +81,42 @@
 }
 
 .input input {
-  border: 1px solid #ddd;
-  border-radius: 5px;
+  border: none;
   padding: 10px;
   width: 100%;
 }
 
-.submitcontainer1 {
+.submit-container {
   display: flex;
   justify-content: center;
 }
 
-.submit1 {
-  background-color: #007bff;
+.submit {
+  background-color:#5e7292;
+  color: white;
   border: none;
-  color: #fff;
-  padding: 10px 20px;
-  border-radius: 5px;
+  padding: 0.75rem 1.5rem;
+  border-radius: 4px;
   cursor: pointer;
+  font-size: 1rem;
+  font-weight: bold;
+  
 }
 
-.submit1:hover {
+.submit:hover {
   background-color: #0056b3;
 }
 
-.submitcontainer2 {
+.login-redirect {
   margin-top: 15px;
   text-align: center;
 }
 
-.forgot-password {
-  font-size: 14px;
-}
-
-.forgot-password a {
+.login-redirect a {
   color: #007bff;
   text-decoration: none;
 }
 
-.forgot-password a:hover {
+.login-redirect a:hover {
   text-decoration: underline;
 }
