--- a/src/component/Shopping/ProductDetailPage.css
+++ b/src/component/Shopping/ProductDetailPage.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   margin: 20px;
+  height:80dvh;
 }
 
 .product-image {
@@ -14,6 +15,7 @@
 .product-image img {
   max-width: 100%;
   height: auto;
+  margin-top: 400px;
 }
 
 .product-info {
