--- a/src/component/Footer/Footer.css
+++ b/src/component/Footer/Footer.css
@@ -115,3 +115,18 @@ footer .container {
   font-size: 15px;
   margin: 0;
 }
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
+#root {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.main-content {
+  flex: 1;
+  overflow: auto; /* This makes sure the main content area takes up the remaining space */
+}
